test/integration/good/promotion/propto.stan
model {
    target += normal_lupdf(1| {0}, 1);
}