test/integration/bad/missing_dist_suffix/completely_undefined2.stan
data {
   int foo_lpmf;
}
model {
  target += foo_lpdf(1);
}